# jpclaims

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: code_definition_yaml.md  data_privacy.md  feature_engineering.md  project_status.md  release_checklist.md  research_cautions.md
examples/: README.md  build_cooccurrence_example.py  build_monthly_panel_example.py  build_patient_datamart_example.py  build_quality_report_example.py  fpies_feature_definitions.yaml  minimal_code_definitions.yaml
examples/sample_data/: claims.csv  diagnoses.csv  medications.csv  patients.csv  procedures.csv
src/jpclaims/: __init__.py  code_match.py  config.py  datamart.py  dates.py  episodes.py  exceptions.py  io.py  normalization.py  qc.py  schema.py  timeline.py  validation.py  windows.py
src/jpclaims/features/: __init__.py  _base.py  adherence.py  comorbidity.py  composite.py  cooccurrence.py  costs.py  demographics.py  diagnoses.py  eligibility.py  health_checkups.py  medications.py  monthly_panel.py  procedures.py  sequence.py  utilization.py
src/jpclaims/recipes/: __init__.py  exclusive_groups.py  phenotype.py
src/jpclaims/reports/: __init__.py  html_report.py  json_report.py
tests/: conftest.py  test_code_match.py  test_composite.py  test_cooccurrence.py  test_datamart.py  test_dates.py  test_demographics.py  test_diagnoses.py  test_medications.py  test_normalization.py  test_procedures.py  test_qc.py  test_quickstart.py  test_release_safety.py  test_schema.py  test_validation.py  test_windows.py
